Created shell for static mode

--- a/Info/README
+++ b/Info/README
@@ -1,4 +1,5 @@
 1)View my .bashrc in my_bashrc.
 2)Git links of project in github_links.
 3)Set Gazebo for Phoenix in environment.
+4)Tmux tutorials
 
